--- a/src-tauri/Cargo.toml
+++ b/src-tauri/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "know-tracer"
+name = "scholars-impact-visualizer"
 version = "0.0.0"
 description = "A Tauri App"
 authors = ["you"]
